# ForeverUp

./: .gitignore  CMakeLists.txt  README.md  git_snap.sh
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  programtablemodel.cpp  programtablemodel.h  shortcutprovider.cpp  shortcutprovider.h  winsysapiutils.cpp  winsysapiutils.h
src/dialogs/: aboutwidget.cpp  aboutwidget.h  aboutwidget.ui  advancedsettingsdialog.cpp  advancedsettingsdialog.h  advancedsettingsdialog.ui  editprogramdialog.cpp  editprogramdialog.h  editprogramdialog.ui  nameanddescriptiondialog.cpp  nameanddescriptiondialog.h  nameanddescriptiondialog.ui
src/resources/: logo.rc  resources.qrc
src/translations/: foreverup_fr.ts
